--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-Flask==2.1.3
-opencv-python==4.5.5.64
-numpy==1.21.5
-pandas==1.3.5
-scikit-learn==1.0.2
-joblib==1.1.0
+# Specify the Python version (optional)
+python_version >=3.7,<3.12
+
+# List of required packages
+numpy==1.24.4
+Flask==2.2.2
+pandas==1.5.3
+requests==2.28.1
+scikit-learn==1.1.3
+matplotlib==3.6.2
+# Add other dependencies as needed
