--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-# List of required packages
 numpy==1.24.4
 Flask==2.2.2
 pandas==1.5.3
 requests==2.28.1
 scikit-learn==1.1.3
 matplotlib==3.6.2
-# Add other dependencies as needed
+gunicorn==20.1.0
