--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-Flask==2.0.1
+numpy==1.24.4
+Flask==2.2.2
+pandas==1.5.3
+requests==2.28.1
+scikit-learn==1.1.3
+matplotlib==3.6.2
+gunicorn==20.1.0
 opencv-python==4.5.3.20210914
-numpy==1.21.2
-pandas==1.3.3
-scikit-learn==0.24.2
 joblib==1.0.1
