--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-numpy==1.24.4
 Flask==2.2.2
+numpy==1.24.4
 pandas==1.5.3
 requests==2.28.1
 scikit-learn==1.1.3
 matplotlib==3.6.2
 gunicorn==20.1.0
-opencv-python==4.5.3.20210914
-joblib==1.0.1
+opencv-python==4.10.0.84  # Updated to a compatible version
+joblib==1.2.0  # Updated to a compatible version
